--- a/Data_Processing.ipynb
+++ b/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Update dataset name as needed\n",
-    "Data_set_name = 'experimental_fault/'\n",
     "\n",
-    "\n",
-    "RAW_DATA_FOLDER = 'raw_data/' + Data_set_name\n",
+    "RAW_DATA_FOLDER = 'raw_data/'\n",
     "RAW_MAT_FOLDER = RAW_DATA_FOLDER + 'raw_mat/'\n",
     "RAW_NPY_FOLDER = RAW_DATA_FOLDER + 'raw_npy/'\n",
-    "NPY_FOLDER = 'processed_input_data/' + Data_set_name\n",
+    "NPY_FOLDER = 'processed_input_data/'\n",
     "\n",
     "#split data\n",
     "## attribute all exp_1 to training\n",
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +63,7 @@
     "           'PP_150_1']\n",
     "\n",
     "\n",
+    "\n",
     "#SLICE_PARAM = [initial_index, strike, win_H, win_W]\n",
     "SLICE_PARAM = [0, 50, 128, 64]\n",
     "\n",
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,48 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EB_025_1\n",
-      "(135, 313, 4, 227)\n",
-      "EB_025_2\n",
-      "(135, 313, 4, 227)\n",
-      "EB_025_3\n",
-      "(135, 313, 4, 227)\n",
-      "EB_050_1\n",
-      "(135, 313, 4, 218)\n",
-      "EB_050_2\n",
-      "(135, 313, 4, 219)\n",
-      "EB_050_3\n",
-      "(135, 313, 4, 220)\n",
-      "EB_150_1\n",
-      "(135, 313, 4, 192)\n",
-      "EB_150_2\n",
-      "(135, 313, 4, 193)\n",
-      "EB_150_3\n",
-      "(135, 313, 4, 191)\n",
-      "PP_025_1\n",
-      "(135, 313, 4, 227)\n",
-      "PP_025_2\n",
-      "(135, 313, 4, 228)\n",
-      "PP_050_1\n",
-      "(135, 313, 4, 219)\n",
-      "PP_050_2\n",
-      "(135, 313, 4, 218)\n",
-      "PP_100_1\n",
-      "(135, 313, 4, 190)\n",
-      "PP_100_2\n",
-      "(135, 313, 4, 205)\n",
-      "PP_150_1\n",
-      "(135, 313, 4, 204)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate and save raw_npy for list of experiment\n",
     "# Only need to run once! \n",
@@ -167,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,48 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "slice_shape = (128, 64, 4, 227)\n",
-      "non_zero_slice = 910\n",
-      "slice_shape = (128, 64, 4, 227)\n",
-      "non_zero_slice = 1021\n",
-      "slice_shape = (128, 64, 4, 227)\n",
-      "non_zero_slice = 949\n",
-      "slice_shape = (128, 64, 4, 218)\n",
-      "non_zero_slice = 902\n",
-      "slice_shape = (128, 64, 4, 219)\n",
-      "non_zero_slice = 893\n",
-      "slice_shape = (128, 64, 4, 220)\n",
-      "non_zero_slice = 968\n",
-      "slice_shape = (128, 64, 4, 192)\n",
-      "non_zero_slice = 659\n",
-      "slice_shape = (128, 64, 4, 193)\n",
-      "non_zero_slice = 675\n",
-      "slice_shape = (128, 64, 4, 191)\n",
-      "non_zero_slice = 644\n",
-      "slice_shape = (128, 64, 4, 227)\n",
-      "non_zero_slice = 923\n",
-      "slice_shape = (128, 64, 4, 228)\n",
-      "non_zero_slice = 908\n",
-      "slice_shape = (128, 64, 4, 219)\n",
-      "non_zero_slice = 824\n",
-      "slice_shape = (128, 64, 4, 218)\n",
-      "non_zero_slice = 843\n",
-      "slice_shape = (128, 64, 4, 190)\n",
-      "non_zero_slice = 717\n",
-      "slice_shape = (128, 64, 4, 205)\n",
-      "non_zero_slice = 758\n",
-      "slice_shape = (128, 64, 4, 204)\n",
-      "non_zero_slice = 770\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Only need to run once! \n",
     "slice_param = SLICE_PARAM\n",
@@ -333,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,123 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 3 4]\n",
-      "[4 3 2 0 1]\n",
-      "[0 1 2 3 4]\n",
-      "[2 3 1 0 4]\n",
-      "[0 1 2 3 4]\n",
-      "[3 0 2 4 1]\n",
-      "[0 1 2 3 4]\n",
-      "[0 3 2 1 4]\n",
-      "[0 1 2 3 4]\n",
-      "[0 4 3 2 1]\n",
-      "[0 1 2 3 4]\n",
-      "[3 0 2 4 1]\n",
-      "[0 1 2 3 4]\n",
-      "[0 4 1 3 2]\n",
-      "[0 1 2 3 4]\n",
-      "[2 3 0 1 4]\n",
-      "[0 1 2 3 4]\n",
-      "[2 3 1 4 0]\n",
-      "{'train_ew': [['EB_025_1', 0], ['EB_025_1', 1], ['EB_025_1', 2], ['EB_025_1', 3], ['EB_025_1', 4], ['EB_050_1', 0], ['EB_050_1', 1], ['EB_050_1', 2], ['EB_050_1', 3], ['EB_050_1', 4], ['EB_150_1', 0], ['EB_150_1', 1], ['EB_150_1', 2], ['EB_150_1', 3], ['EB_150_1', 4], ['PP_025_1', 0], ['PP_025_1', 1], ['PP_025_1', 2], ['PP_025_1', 3], ['PP_025_1', 4], ['PP_050_1', 0], ['PP_050_1', 1], ['PP_050_1', 2], ['PP_050_1', 3], ['PP_050_1', 4], ['PP_100_1', 0], ['PP_100_1', 1], ['PP_100_1', 2], ['PP_100_1', 3], ['PP_100_1', 4], ['EB_025_2', 0], ['EB_025_2', 1], ['EB_025_3', 0], ['EB_025_3', 4], ['EB_050_2', 4], ['EB_050_2', 1], ['EB_050_3', 1], ['EB_050_3', 4], ['EB_150_2', 2], ['EB_150_2', 1], ['EB_150_3', 4], ['EB_150_3', 1], ['PP_025_2', 3], ['PP_025_2', 2], ['PP_050_2', 1], ['PP_050_2', 4], ['PP_100_2', 4], ['PP_100_2', 0]], 'eval_ew': [['EB_025_2', 4], ['EB_025_2', 3], ['EB_025_3', 2], ['EB_025_3', 3], ['EB_050_2', 3], ['EB_050_2', 0], ['EB_050_3', 0], ['EB_050_3', 3], ['EB_150_2', 0], ['EB_150_2', 4], ['EB_150_3', 3], ['EB_150_3', 0], ['PP_025_2', 0], ['PP_025_2', 4], ['PP_050_2', 2], ['PP_050_2', 3], ['PP_100_2', 2], ['PP_100_2', 3]], 'test_ew': [['EB_025_2', 2], ['EB_025_3', 1], ['EB_050_2', 2], ['EB_050_3', 2], ['EB_150_2', 3], ['EB_150_3', 2], ['PP_025_2', 1], ['PP_050_2', 0], ['PP_100_2', 1]], 'tot_dataset': 12594, 'train_ratio': '0.64', 'eval_ratio': '0.24', 'test_ratio': '0.12'}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'train_ew': [['EB_025_1', 0],\n",
-       "  ['EB_025_1', 1],\n",
-       "  ['EB_025_1', 2],\n",
-       "  ['EB_025_1', 3],\n",
-       "  ['EB_025_1', 4],\n",
-       "  ['EB_050_1', 0],\n",
-       "  ['EB_050_1', 1],\n",
-       "  ['EB_050_1', 2],\n",
-       "  ['EB_050_1', 3],\n",
-       "  ['EB_050_1', 4],\n",
-       "  ['EB_150_1', 0],\n",
-       "  ['EB_150_1', 1],\n",
-       "  ['EB_150_1', 2],\n",
-       "  ['EB_150_1', 3],\n",
-       "  ['EB_150_1', 4],\n",
-       "  ['PP_025_1', 0],\n",
-       "  ['PP_025_1', 1],\n",
-       "  ['PP_025_1', 2],\n",
-       "  ['PP_025_1', 3],\n",
-       "  ['PP_025_1', 4],\n",
-       "  ['PP_050_1', 0],\n",
-       "  ['PP_050_1', 1],\n",
-       "  ['PP_050_1', 2],\n",
-       "  ['PP_050_1', 3],\n",
-       "  ['PP_050_1', 4],\n",
-       "  ['PP_100_1', 0],\n",
-       "  ['PP_100_1', 1],\n",
-       "  ['PP_100_1', 2],\n",
-       "  ['PP_100_1', 3],\n",
-       "  ['PP_100_1', 4],\n",
-       "  ['EB_025_2', 0],\n",
-       "  ['EB_025_2', 1],\n",
-       "  ['EB_025_3', 0],\n",
-       "  ['EB_025_3', 4],\n",
-       "  ['EB_050_2', 4],\n",
-       "  ['EB_050_2', 1],\n",
-       "  ['EB_050_3', 1],\n",
-       "  ['EB_050_3', 4],\n",
-       "  ['EB_150_2', 2],\n",
-       "  ['EB_150_2', 1],\n",
-       "  ['EB_150_3', 4],\n",
-       "  ['EB_150_3', 1],\n",
-       "  ['PP_025_2', 3],\n",
-       "  ['PP_025_2', 2],\n",
-       "  ['PP_050_2', 1],\n",
-       "  ['PP_050_2', 4],\n",
-       "  ['PP_100_2', 4],\n",
-       "  ['PP_100_2', 0]],\n",
-       " 'eval_ew': [['EB_025_2', 4],\n",
-       "  ['EB_025_2', 3],\n",
-       "  ['EB_025_3', 2],\n",
-       "  ['EB_025_3', 3],\n",
-       "  ['EB_050_2', 3],\n",
-       "  ['EB_050_2', 0],\n",
-       "  ['EB_050_3', 0],\n",
-       "  ['EB_050_3', 3],\n",
-       "  ['EB_150_2', 0],\n",
-       "  ['EB_150_2', 4],\n",
-       "  ['EB_150_3', 3],\n",
-       "  ['EB_150_3', 0],\n",
-       "  ['PP_025_2', 0],\n",
-       "  ['PP_025_2', 4],\n",
-       "  ['PP_050_2', 2],\n",
-       "  ['PP_050_2', 3],\n",
-       "  ['PP_100_2', 2],\n",
-       "  ['PP_100_2', 3]],\n",
-       " 'test_ew': [['EB_025_2', 2],\n",
-       "  ['EB_025_3', 1],\n",
-       "  ['EB_050_2', 2],\n",
-       "  ['EB_050_3', 2],\n",
-       "  ['EB_150_2', 3],\n",
-       "  ['EB_150_3', 2],\n",
-       "  ['PP_025_2', 1],\n",
-       "  ['PP_050_2', 0],\n",
-       "  ['PP_100_2', 1]],\n",
-       " 'tot_dataset': 12594,\n",
-       " 'train_ratio': '0.64',\n",
-       " 'eval_ratio': '0.24',\n",
-       " 'test_ratio': '0.12'}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "G1 = ['EB_025_1', 'EB_050_1', 'EB_150_1','PP_025_1','PP_050_1','PP_100_1']\n",
     "G2 = ['EB_025_2', 'EB_025_3', 'EB_050_2','EB_050_3','EB_150_2','EB_150_3','PP_025_2','PP_050_2','PP_100_2' ]\n",
