Resolved Labelling issue in the preprocessing script

--- a/Data_Processing_2022.ipynb
+++ b/Data_Processing_2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Update dataset name as needed\n",
     "\n",
-    "EXPERIMENT = \"sand\"\n",
-    "# EXPERIMENT = \"clay\"\n",
+    "# EXPERIMENT = \"sand\"\n",
+    "EXPERIMENT = \"clay\"\n",
     "\n",
     "# RAW_DATA_FOLDER_CLAY = '../'\n",
     "# RAW_MAT_FOLDER_CLAY = RAW_DATA_FOLDER_CLAY + 'raw_mat_new_clay/'\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,96 +148,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E355_64px_forCNN\n",
-      "(128, 214, 79)\n",
-      "(4, 79, 2)\n",
+      "EB_025_1\n",
+      "(128, 264, 227)\n",
+      "(5, 227, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E339_64px_forCNN\n",
-      "(128, 464, 63)\n",
-      "(9, 63, 2)\n",
+      "EB_025_2\n",
+      "(128, 264, 227)\n",
+      "(5, 227, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E280_64px_forCNN\n",
-      "(128, 414, 61)\n",
-      "(8, 61, 2)\n",
+      "EB_025_3\n",
+      "(128, 264, 227)\n",
+      "(5, 227, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E366_64px_forCNN\n",
-      "(128, 814, 42)\n",
-      "(16, 42, 2)\n",
+      "EB_050_1\n",
+      "(128, 264, 218)\n",
+      "(5, 218, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E342_64px_forCNN\n",
-      "(128, 814, 42)\n",
-      "(16, 42, 2)\n",
+      "EB_050_2\n",
+      "(128, 264, 219)\n",
+      "(5, 219, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E340_64px_forCNN\n",
-      "(128, 614, 55)\n",
-      "(12, 55, 2)\n",
+      "EB_050_3\n",
+      "(128, 264, 220)\n",
+      "(5, 220, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E364_64px_forCNN\n",
-      "(128, 1264, 48)\n",
-      "(25, 48, 2)\n",
+      "EB_150_1\n",
+      "(128, 264, 192)\n",
+      "(5, 192, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E347_64px_forCNN\n",
-      "(128, 264, 62)\n",
-      "(5, 62, 2)\n",
+      "EB_150_2\n",
+      "(128, 264, 193)\n",
+      "(5, 193, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E346_64px_forCNN\n",
-      "(128, 514, 61)\n",
-      "(10, 61, 2)\n",
+      "EB_150_3\n",
+      "(128, 264, 191)\n",
+      "(5, 191, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E341_64px_forCNN\n",
-      "(128, 1214, 49)\n",
-      "(24, 49, 2)\n",
+      "PP_025_1\n",
+      "(128, 264, 227)\n",
+      "(5, 227, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E365_64px_forCNN\n",
-      "(128, 614, 55)\n",
-      "(12, 55, 2)\n",
+      "PP_025_2\n",
+      "(128, 264, 228)\n",
+      "(5, 228, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E338_64px_forCNN\n",
-      "(128, 214, 82)\n",
-      "(4, 82, 2)\n",
+      "PP_050_1\n",
+      "(128, 264, 219)\n",
+      "(5, 219, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E345_64px_forCNN\n",
-      "(128, 264, 76)\n",
-      "(5, 76, 2)\n",
+      "PP_050_2\n",
+      "(128, 264, 218)\n",
+      "(5, 218, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E363_64px_forCNN\n",
-      "(128, 264, 66)\n",
-      "(5, 66, 2)\n",
+      "PP_100_1\n",
+      "(128, 264, 190)\n",
+      "(5, 190, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E368_64px_forCNN\n",
-      "(128, 364, 66)\n",
-      "(7, 66, 2)\n",
+      "PP_100_2\n",
+      "(128, 264, 205)\n",
+      "(5, 205, 2)\n",
       "[0, 50, 128, 64]\n",
-      "E369_64px_forCNN\n",
-      "(128, 464, 58)\n",
-      "(9, 58, 2)\n",
-      "[0, 50, 128, 64]\n",
-      "E458_64px_forCNN\n",
-      "(128, 314, 99)\n",
-      "(6, 99, 2)\n",
-      "[0, 50, 128, 64]\n",
-      "E459_64px_forCNN\n",
-      "(128, 314, 107)\n",
-      "(6, 107, 2)\n",
-      "[0, 50, 128, 64]\n",
-      "E463_64px_forCNN\n",
-      "(128, 264, 98)\n",
-      "(5, 98, 2)\n",
-      "[0, 50, 128, 64]\n",
-      "E464_64px_forCNN\n",
-      "(128, 214, 99)\n",
-      "(4, 99, 2)\n",
-      "[0, 50, 128, 64]\n",
-      "E499_64px_forCNN\n",
-      "(128, 264, 90)\n",
-      "(5, 90, 2)\n",
+      "PP_150_1\n",
+      "(128, 264, 204)\n",
+      "(5, 204, 2)\n",
       "[0, 50, 128, 64]\n"
      ]
     }
@@ -253,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,97 +338,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(128, 214, 79)\n",
+      "(128, 264, 227)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 79)\n",
-      "non_zero_slice = 253\n",
-      "(128, 464, 63)\n",
+      "Data_slice_shape = (128, 64, 227)\n",
+      "non_zero_slice = 927\n",
+      "(128, 264, 227)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 63)\n",
-      "non_zero_slice = 424\n",
-      "(128, 414, 61)\n",
+      "Data_slice_shape = (128, 64, 227)\n",
+      "non_zero_slice = 1005\n",
+      "(128, 264, 227)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 61)\n",
-      "non_zero_slice = 374\n",
-      "(128, 814, 42)\n",
+      "Data_slice_shape = (128, 64, 227)\n",
+      "non_zero_slice = 931\n",
+      "(128, 264, 218)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 42)\n",
-      "non_zero_slice = 509\n",
-      "(128, 814, 42)\n",
+      "Data_slice_shape = (128, 64, 218)\n",
+      "non_zero_slice = 892\n",
+      "(128, 264, 219)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 42)\n",
-      "non_zero_slice = 493\n",
-      "(128, 614, 55)\n",
+      "Data_slice_shape = (128, 64, 219)\n",
+      "non_zero_slice = 871\n",
+      "(128, 264, 220)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 55)\n",
-      "non_zero_slice = 500\n",
-      "(128, 1264, 48)\n",
+      "Data_slice_shape = (128, 64, 220)\n",
+      "non_zero_slice = 957\n",
+      "(128, 264, 192)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 48)\n",
-      "non_zero_slice = 950\n",
-      "(128, 264, 62)\n",
+      "Data_slice_shape = (128, 64, 192)\n",
+      "non_zero_slice = 649\n",
+      "(128, 264, 193)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 62)\n",
-      "non_zero_slice = 252\n",
-      "(128, 514, 61)\n",
+      "Data_slice_shape = (128, 64, 193)\n",
+      "non_zero_slice = 673\n",
+      "(128, 264, 191)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 61)\n",
-      "non_zero_slice = 490\n",
-      "(128, 1214, 49)\n",
+      "Data_slice_shape = (128, 64, 191)\n",
+      "non_zero_slice = 644\n",
+      "(128, 264, 227)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 49)\n",
-      "non_zero_slice = 775\n",
-      "(128, 614, 55)\n",
+      "Data_slice_shape = (128, 64, 227)\n",
+      "non_zero_slice = 912\n",
+      "(128, 264, 228)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 55)\n",
-      "non_zero_slice = 533\n",
-      "(128, 214, 82)\n",
+      "Data_slice_shape = (128, 64, 228)\n",
+      "non_zero_slice = 915\n",
+      "(128, 264, 219)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 82)\n",
-      "non_zero_slice = 260\n",
-      "(128, 264, 76)\n",
+      "Data_slice_shape = (128, 64, 219)\n",
+      "non_zero_slice = 825\n",
+      "(128, 264, 218)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 76)\n",
-      "non_zero_slice = 305\n",
-      "(128, 264, 66)\n",
+      "Data_slice_shape = (128, 64, 218)\n",
+      "non_zero_slice = 852\n",
+      "(128, 264, 190)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 66)\n",
-      "non_zero_slice = 261\n",
-      "(128, 364, 66)\n",
+      "Data_slice_shape = (128, 64, 190)\n",
+      "non_zero_slice = 711\n",
+      "(128, 264, 205)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 66)\n",
-      "non_zero_slice = 369\n",
-      "(128, 464, 58)\n",
+      "Data_slice_shape = (128, 64, 205)\n",
+      "non_zero_slice = 757\n",
+      "(128, 264, 204)\n",
       "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 58)\n",
-      "non_zero_slice = 417\n",
-      "(128, 314, 99)\n",
-      "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 99)\n",
-      "non_zero_slice = 495\n",
-      "(128, 314, 107)\n",
-      "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 107)\n",
-      "non_zero_slice = 498\n",
-      "(128, 264, 98)\n",
-      "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 98)\n",
-      "non_zero_slice = 408\n",
-      "(128, 214, 99)\n",
-      "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 99)\n",
-      "non_zero_slice = 321\n",
-      "(128, 264, 90)\n",
-      "0 50 128 64\n",
-      "Data_slice_shape = (128, 64, 90)\n",
-      "non_zero_slice = 367\n"
+      "Data_slice_shape = (128, 64, 204)\n",
+      "non_zero_slice = 766\n"
      ]
     }
    ],
@@ -460,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,74 +519,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num_win 4\n",
-      "len_b 260\n",
-      "[0 1 2 3]\n",
-      "[1 2 3 0]\n",
-      "num_win 3\n",
-      "len_b 775\n",
-      "[0 1 2]\n",
-      "[0 2 1]\n",
-      "num_win 2\n",
-      "len_b 493\n",
-      "[0 1]\n",
-      "[1 0]\n",
       "num_win 5\n",
-      "len_b 305\n",
+      "len_b 1005\n",
       "[0 1 2 3 4]\n",
-      "[4 3 2 0 1]\n",
-      "num_win 10\n",
-      "len_b 490\n",
-      "[0 1 2 3 4 5 6 7 8 9]\n",
-      "[9 4 3 8 2 0 7 5 1 6]\n",
-      "num_win 4\n",
-      "len_b 253\n",
-      "[0 1 2 3]\n",
-      "[2 0 1 3]\n",
-      "num_win 3\n",
-      "len_b 950\n",
-      "[0 1 2]\n",
-      "[1 0 2]\n",
-      "num_win 2\n",
-      "len_b 509\n",
-      "[0 1]\n",
-      "[1 0]\n",
-      "num_win 9\n",
-      "len_b 417\n",
-      "[0 1 2 3 4 5 6 7 8]\n",
-      "[7 2 5 1 8 6 3 0 4]\n",
+      "[3 1 0 2 4]\n",
       "num_win 5\n",
-      "len_b 261\n",
+      "len_b 931\n",
       "[0 1 2 3 4]\n",
-      "[1 3 4 0 2]\n",
-      "num_win 7\n",
-      "len_b 369\n",
-      "[0 1 2 3 4 5 6]\n",
-      "[1 6 5 2 3 0 4]\n",
-      "num_win 6\n",
-      "len_b 495\n",
-      "[0 1 2 3 4 5]\n",
-      "[4 3 5 0 1 2]\n",
+      "[4 1 0 2 3]\n",
       "num_win 5\n",
-      "len_b 408\n",
+      "len_b 871\n",
       "[0 1 2 3 4]\n",
-      "[4 2 0 3 1]\n",
-      "num_win 4\n",
-      "len_b 321\n",
-      "[0 1 2 3]\n",
-      "[1 0 2 3]\n",
+      "[1 4 0 3 2]\n",
       "num_win 5\n",
-      "len_b 367\n",
+      "len_b 957\n",
       "[0 1 2 3 4]\n",
-      "[1 4 3 2 0]\n",
-      "{'train_ew': [['E280_64px_forCNN', 0], ['E280_64px_forCNN', 1], ['E280_64px_forCNN', 2], ['E280_64px_forCNN', 3], ['E280_64px_forCNN', 4], ['E280_64px_forCNN', 5], ['E280_64px_forCNN', 6], ['E280_64px_forCNN', 7], ['E339_64px_forCNN', 0], ['E339_64px_forCNN', 1], ['E339_64px_forCNN', 2], ['E339_64px_forCNN', 3], ['E339_64px_forCNN', 4], ['E339_64px_forCNN', 5], ['E339_64px_forCNN', 6], ['E339_64px_forCNN', 7], ['E339_64px_forCNN', 8], ['E347_64px_forCNN', 0], ['E347_64px_forCNN', 1], ['E347_64px_forCNN', 2], ['E347_64px_forCNN', 3], ['E347_64px_forCNN', 4], ['E365_64px_forCNN', 0], ['E365_64px_forCNN', 1], ['E459_64px_forCNN', 0], ['E459_64px_forCNN', 1], ['E459_64px_forCNN', 2], ['E459_64px_forCNN', 3], ['E459_64px_forCNN', 4], ['E459_64px_forCNN', 5], ['E338_64px_forCNN', 3], ['E338_64px_forCNN', 0], ['E341_64px_forCNN', 1], ['E342_64px_forCNN', 0], ['E345_64px_forCNN', 2], ['E345_64px_forCNN', 0], ['E345_64px_forCNN', 1], ['E346_64px_forCNN', 2], ['E346_64px_forCNN', 0], ['E346_64px_forCNN', 7], ['E346_64px_forCNN', 5], ['E346_64px_forCNN', 1], ['E346_64px_forCNN', 6], ['E355_64px_forCNN', 1], ['E355_64px_forCNN', 3], ['E364_64px_forCNN', 2], ['E366_64px_forCNN', 0], ['E369_64px_forCNN', 8], ['E369_64px_forCNN', 6], ['E369_64px_forCNN', 3], ['E369_64px_forCNN', 0], ['E369_64px_forCNN', 4], ['E363_64px_forCNN', 4], ['E363_64px_forCNN', 0], ['E363_64px_forCNN', 2], ['E368_64px_forCNN', 2], ['E368_64px_forCNN', 3], ['E368_64px_forCNN', 0], ['E368_64px_forCNN', 4], ['E458_64px_forCNN', 0], ['E458_64px_forCNN', 1], ['E458_64px_forCNN', 2], ['E463_64px_forCNN', 0], ['E463_64px_forCNN', 3], ['E463_64px_forCNN', 1], ['E464_64px_forCNN', 2], ['E464_64px_forCNN', 3], ['E499_64px_forCNN', 3], ['E499_64px_forCNN', 2], ['E499_64px_forCNN', 0]], 'eval_ew': [['E338_64px_forCNN', 1], ['E341_64px_forCNN', 0], ['E345_64px_forCNN', 4], ['E346_64px_forCNN', 9], ['E346_64px_forCNN', 4], ['E346_64px_forCNN', 3], ['E355_64px_forCNN', 2], ['E364_64px_forCNN', 1], ['E369_64px_forCNN', 7], ['E369_64px_forCNN', 2], ['E369_64px_forCNN', 5], ['E363_64px_forCNN', 1], ['E368_64px_forCNN', 1], ['E368_64px_forCNN', 6], ['E458_64px_forCNN', 4], ['E458_64px_forCNN', 3], ['E463_64px_forCNN', 4], ['E464_64px_forCNN', 1], ['E499_64px_forCNN', 1]], 'test_ew': [['E338_64px_forCNN', 2], ['E341_64px_forCNN', 2], ['E342_64px_forCNN', 1], ['E345_64px_forCNN', 3], ['E346_64px_forCNN', 8], ['E355_64px_forCNN', 0], ['E364_64px_forCNN', 0], ['E366_64px_forCNN', 1], ['E369_64px_forCNN', 1], ['E363_64px_forCNN', 3], ['E368_64px_forCNN', 5], ['E458_64px_forCNN', 5], ['E463_64px_forCNN', 2], ['E464_64px_forCNN', 0], ['E499_64px_forCNN', 4]], 'tot_dataset': 8754, 'train_ratio': '0.61', 'eval_ratio': '0.18', 'test_ratio': '0.20'}\n"
+      "[1 3 2 4 0]\n",
+      "num_win 5\n",
+      "len_b 673\n",
+      "[0 1 2 3 4]\n",
+      "[0 1 2 3 4]\n",
+      "num_win 5\n",
+      "len_b 644\n",
+      "[0 1 2 3 4]\n",
+      "[0 1 4 3 2]\n",
+      "num_win 5\n",
+      "len_b 915\n",
+      "[0 1 2 3 4]\n",
+      "[3 0 2 1 4]\n",
+      "num_win 5\n",
+      "len_b 852\n",
+      "[0 1 2 3 4]\n",
+      "[0 4 1 2 3]\n",
+      "num_win 5\n",
+      "len_b 757\n",
+      "[0 1 2 3 4]\n",
+      "[1 3 0 4 2]\n",
+      "{'train_ew': [['EB_025_1', 0], ['EB_025_1', 1], ['EB_025_1', 2], ['EB_025_1', 3], ['EB_025_1', 4], ['EB_050_1', 0], ['EB_050_1', 1], ['EB_050_1', 2], ['EB_050_1', 3], ['EB_050_1', 4], ['EB_150_1', 0], ['EB_150_1', 1], ['EB_150_1', 2], ['EB_150_1', 3], ['EB_150_1', 4], ['PP_025_1', 0], ['PP_025_1', 1], ['PP_025_1', 2], ['PP_025_1', 3], ['PP_025_1', 4], ['PP_050_1', 0], ['PP_050_1', 1], ['PP_050_1', 2], ['PP_050_1', 3], ['PP_050_1', 4], ['PP_100_1', 0], ['PP_100_1', 1], ['PP_100_1', 2], ['PP_100_1', 3], ['PP_100_1', 4], ['EB_025_2', 0], ['EB_025_2', 2], ['EB_025_2', 4], ['EB_025_3', 0], ['EB_025_3', 2], ['EB_025_3', 3], ['EB_050_2', 0], ['EB_050_2', 3], ['EB_050_2', 2], ['EB_050_3', 2], ['EB_050_3', 4], ['EB_050_3', 0], ['EB_150_2', 2], ['EB_150_2', 3], ['EB_150_2', 4], ['EB_150_3', 4], ['EB_150_3', 3], ['EB_150_3', 2], ['PP_025_2', 2], ['PP_025_2', 1], ['PP_025_2', 4], ['PP_050_2', 1], ['PP_050_2', 2], ['PP_050_2', 3], ['PP_100_2', 0], ['PP_100_2', 4], ['PP_100_2', 2]], 'eval_ew': [['EB_025_2', 3], ['EB_025_3', 4], ['EB_050_2', 1], ['EB_050_3', 1], ['EB_150_2', 0], ['EB_150_3', 0], ['PP_025_2', 3], ['PP_050_2', 0], ['PP_100_2', 1]], 'test_ew': [['EB_025_2', 1], ['EB_025_3', 1], ['EB_050_2', 4], ['EB_050_3', 3], ['EB_150_2', 1], ['EB_150_3', 1], ['PP_025_2', 0], ['PP_050_2', 4], ['PP_100_2', 3]], 'tot_dataset': 12521, 'train_ratio': '0.76', 'eval_ratio': '0.12', 'test_ratio': '0.12'}\n"
      ]
     }
    ],
@@ -669,8 +605,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d5b869f9e4e23c26c27a4c0697de3e6b12f69bb347bea3ec85fb04f0bb147111"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.6 ('nn682')",
    "language": "python",
    "name": "python3"
   },
